--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -5,35 +5,75 @@
 
 
 
-<div class="container-fluid mt-5 text-center">
+<div class="container mt-5 text-center">
     <h1>Progica</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore ipsa modi! Exercitationem magnam
-        laborum, ad provident esse autem asperiores laudantium dicta velit nemo, sed pariatur. Recusandae ullam non
-        quis.</p>
+    <p>Association des propriétaires de gîtes campagnards</p>
+
+    <div class="row">
 
 
-    <h2>Les gîtes disponibles aujourd'hui</h2>
-    <div class="row flex">
-        {% for property in properties %}
-        <div class="col-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a
-                            href="{{ path('property.show' , {id: property.id, slug: property.slug}) }}">{{property.title}}</a>
-                    </h5>
-                    <p class="card-text">{{property.city}} ({{property.postalCode}})</p>
-                    <div class="text-primary" style="font-weight: bold;">{{property.formattedPrice}} € la semaine</div>
-                </div>
 
-            </div>
-        </div>
 
-        {% endfor %}
-        <div>
-            <a href="{{ path('property.index')}}" class="btn btn-primary">Découvrez nos gîtes</a>
-        </div>
+        <h2 class="mt-3">Les gîtes disponibles</h2>
+        <p>
+            Découvrez l'ensemble de notre parc locatif sur toute la France. Les gîtes sont disponibles à la semaine <br>
+            <a href="{{ path('property.index')}}" class="btn btn-primary mt-5">Découvrez nos gîtes</a>
+        </p>
     </div>
+    <hr>
+
+
+    <h2>Contacter Progica</h2>
+    <p>Pour avoir plus d'informations sur nos gîtes, vous pouvez nous contacter par téléphone oubien par mail</p>
+   <div class="row">
+       <div class="col-md-6">
+
+        
+                <h4>Par téléphone au 02.97.01.02.03</h4>
+                <p>
+                    <table class="table table-striped">
+                        <tr>
+                            <td>Lundi</td>
+                            <td>De 8h à 12h</td>
+                        </tr>
+                        <tr>
+                            <td>Mardi</td>
+                            <td>De 8h à 12h et de 14h à 17h</td>
+                        </tr>
+                        <tr>
+                            <td>Mercredi</td>
+                            <td>De 8h à 12h</td>
+                        </tr>
+                        <tr>
+                            <td>Jeudi</td>
+                            <td>De 8h à 12h</td>
+                        </tr>
+                        <tr>
+                            <td>Vendredi</td>
+                            <td>De 8h à 12h</td>
+                        </tr>
+                    </table>
+                </p>
+           
+        
+       </div>
+       <div class="col-md-6">
+       
+                <h4>Par mail</h4>
+                <p>
+                
+                    <a href="{{ path('contact')}}" class="btn btn-primary mt-5 mb-5">Nous contacter</a>
+                </p>
+           
+        
+      
+   </div>
+    <div>
+       
+    </div>
+
+
+</div>
 
 </div>
 
