--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,20 +1,46 @@
-
 {% extends "base.html.twig" %}
 
 {% block title %}gîtes{% endblock %}
 {% block body %}
+<div class="container mt-4">
+   
+        {{ form_start(form) }}
+        
+        <div class="form-control">
+            <div class="row mt-3">
+            <div class="col-3">
+                {{ form_row(form.minSurface) }} 
+            </div>
+            <div class="col-3">
+                {{ form_row(form.maxPrice) }} 
+            </div>
+            <div class="col-3">
+                <button class="btn btn-primary">Rechercher</button>
+            </div>
+        </div>
+        </div>
+        
+      
+        {{ form_end(form) }}
+    
+ 
+</div>
 
 
-    <div class="container mt-4">
-        <h1>Nos gîtes disponibles à la semaine</h1>
+<div class="container mt-4">
+    <h1>Nos gîtes disponibles à la semaine</h1>
 
-       <div class="row">
+    <div class="row">
         {% for property in properties %}
         <div class="col-md-4">
-        {% include 'property/_property.html.twig' %}
-    </div>
+            {% include 'property/_property.html.twig' %}
+        </div>
         {% endfor %}
-       </div>
     </div>
+    <div class="pagination">
+        
+        {{ knp_pagination_render(properties) }}
+    </div>
+</div>
 
 {% endblock %}
