--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -2,5 +2,8 @@
 
 {% block title %}Contact{% endblock %}
 {% block body %}
-<h1>Formulaire</h1>
+<body>
+    <h1>Formulaire</h1>
+</body>
+
 {% endblock %}
