--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -3,16 +3,13 @@
 {% block title %}home{% endblock %}
 {% block body %}
 
-
-
+<body>
+    
 <div class="container mt-5 text-center">
     <h1>Progica</h1>
     <p>Association des propriétaires de gîtes campagnards</p>
 
     <div class="row">
-
-
-
 
         <h2 class="mt-3">Les gîtes disponibles</h2>
         <p>
@@ -25,56 +22,57 @@
 
     <h2>Contacter Progica</h2>
     <p>Pour avoir plus d'informations sur nos gîtes, vous pouvez nous contacter par téléphone oubien par mail</p>
-   <div class="row">
-       <div class="col-md-6">
+    <div class="row">
+        <div class="col-md-6">
 
-        
-                <h4>Par téléphone au 02.97.01.02.03</h4>
-                <p>
-                    <table class="table table-striped">
-                        <tr>
-                            <td>Lundi</td>
-                            <td>De 8h à 12h</td>
-                        </tr>
-                        <tr>
-                            <td>Mardi</td>
-                            <td>De 8h à 12h et de 14h à 17h</td>
-                        </tr>
-                        <tr>
-                            <td>Mercredi</td>
-                            <td>De 8h à 12h</td>
-                        </tr>
-                        <tr>
-                            <td>Jeudi</td>
-                            <td>De 8h à 12h</td>
-                        </tr>
-                        <tr>
-                            <td>Vendredi</td>
-                            <td>De 8h à 12h</td>
-                        </tr>
-                    </table>
-                </p>
-           
-        
-       </div>
-       <div class="col-md-6">
-       
-                <h4>Par mail</h4>
-                <p>
-                
-                    <a href="{{ path('contact')}}" class="btn btn-primary mt-5 mb-5">Nous contacter</a>
-                </p>
-           
-        
-      
-   </div>
-    <div>
-       
+
+            <h4>Par téléphone au 02.97.01.02.03</h4>
+            <p>
+            <table class="table table-striped">
+                <tr>
+                    <td>Lundi</td>
+                    <td>De 8h à 12h</td>
+                </tr>
+                <tr>
+                    <td>Mardi</td>
+                    <td>De 8h à 12h et de 14h à 17h</td>
+                </tr>
+                <tr>
+                    <td>Mercredi</td>
+                    <td>De 8h à 12h</td>
+                </tr>
+                <tr>
+                    <td>Jeudi</td>
+                    <td>De 8h à 12h</td>
+                </tr>
+                <tr>
+                    <td>Vendredi</td>
+                    <td>De 8h à 12h</td>
+                </tr>
+            </table>
+            </p>
+
+
+        </div>
+        <div class="col-md-6">
+
+            <h4>Par mail</h4>
+            <p>
+
+                <a href="{{ path('contact')}}" class="btn btn-primary mt-5 mb-5">Nous contacter</a>
+            </p>
+
+
+
+        </div>
+        <div>
+
+        </div>
+
+
     </div>
 
-
 </div>
-
-</div>
+</body>
 
 {% endblock %}
