--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,11 +1,12 @@
 {% extends "base.html.twig" %}
 
 {% block title %}gîtes{% endblock %}
+
 {% block body %}
+<body>
 <div class="container mt-4">
    
         {{ form_start(form) }}
-        
         <div class="form-control">
             <div class="row mt-3">
             <div class="col-3">
@@ -15,15 +16,14 @@
                 {{ form_row(form.maxPrice) }} 
             </div>
             <div class="col-3">
+                {{ form_row(form.options) }} 
+            </div>
+            <div class="col-3">
                 <button class="btn btn-primary">Rechercher</button>
             </div>
         </div>
         </div>
-        
-      
         {{ form_end(form) }}
-    
- 
 </div>
 
 
@@ -42,5 +42,17 @@
         {{ knp_pagination_render(properties) }}
     </div>
 </div>
-
+</body>
 {% endblock %}
+
+{% block stylesheets %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
+{% endblock %}
+
+{% block javascripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+<script>
+    $('select').select2();
+</script>
+{% endblock %}
+
