--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -5,9 +5,10 @@
     <div class="col-md-4">{{ form_row(form.price)}}</div>
 </div>
 <div class="row">
-    <div class="col-md-4">{{ form_row(form.rooms)}}</div>
-    <div class="col-md-4">{{ form_row(form.bed)}}</div>
+    <div class="col-md-2">{{ form_row(form.rooms)}}</div>
+    <div class="col-md-2">{{ form_row(form.bed)}}</div>
     <div class="col-md-4">{{ form_row(form.animal)}}</div>
+    <div class="col-md-4">{{ form_row(form.imageFile)}}</div>
 </div>
 <div class="row">
     <div class="col-md-4">{{ form_row(form.adress)}}</div>
