--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -1,50 +1,45 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Gérer les gîtes{% endblock %}
+{% block title %}Gérer les gîtes
+{% endblock %}
 {% block body %}
-<body>
-    <div class="container">
-        <h1 class="mt-3 text-center">Gérer les gîtes</h1>
+	<body>
+		<div class="container mb-4">
+			<h1 class="mt-3 text-center">Gérer les gîtes</h1>
 
-        {% for message in app.flashes('success') %}
-        <div class="alert alert-success">{{message}}</div>
-        {% endfor %}
+			{% for message in app.flashes('success') %}
+				<div class="alert alert-success">{{message}}</div>
+			{% endfor %}
 
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>N°</th>
-                    <th>Titre</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for property in properties %}
-                <tr>
-                    <td>{{ property.id }}</td>
-                    <td>{{ property.title }}</td>
-                    <td>
-                        <a href="{{ path('admin.property.edit', {id: property.id}) }}" class="btn btn-secondary">Editer</a>
-                        <form method="post" action="{{ path('admin.property.delete', {id: property.id}) }}" style="display: inline-block;" onsubmit="return confirm('Voulez-vous vraiment supprimer ce gîte ?')">
-                            <input type="hidden" name="_method" value="DELETE">
-                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id)}}">
-                            <button class="btn btn-danger">Supprimer</button>
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-      
-        <div class="text-start">
-            <a href="{{ path('admin.option.index') }}" class="btn btn-primary">Gérer les options</a>
-        </div> 
-       <div class="text-end">
-           <a href="{{ path('admin.property.new') }}" class="btn btn-primary">Créer un nouveau gite</a>
-       </div> 
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Titre</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for property in properties %}
+						<tr>
+							<td>{{ property.title }}</td>
+							<td>
+								<a href="{{ path('admin.property.edit', {id: property.id}) }}" class="btn btn-secondary">Editer</a>
+								<form method="post" action="{{ path('admin.property.delete', {id: property.id}) }}" style="display: inline-block;" onsubmit="return confirm('Voulez-vous vraiment supprimer ce gîte ?')">
+									<input type="hidden" name="_method" value="DELETE">
+									<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id)}}">
+									<button class="btn btn-danger">Supprimer</button>
+								</form>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
-    </div>
-   
-</body>
+			<div class="text-start">
+				<a href="{{ path('admin.option.index') }}" class="btn btn-primary">Gérer les options</a>
+				<a href="{{ path('admin.property.new') }}" class="btn btn-primary">Créer un nouveau gite</a>
+			</div>
+		</div>
+	</body>
 
 {% endblock %}
