--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,78 +1,93 @@
 {% extends "base.html.twig" %}
 
-{% block title %}home{% endblock %}
+{% block title %}home
+{% endblock %}
 {% block body %}
 
-<body>
-    
-<div class="container mt-5 text-center">
-    <h1>Progica</h1>
-    <p>Association des propriétaires de gîtes campagnards</p>
+	<body>
 
-    <div class="row">
-
-        <h2 class="mt-3">Les gîtes disponibles</h2>
-        <p>
-            Découvrez l'ensemble de notre parc locatif sur toute la France. Les gîtes sont disponibles à la semaine <br>
-            <a href="{{ path('property.index')}}" class="btn btn-primary mt-5">Découvrez nos gîtes</a>
-        </p>
-    </div>
-    <hr>
+		<div class="container">
+			<div class="row">
 
 
-    <h2>Contacter Progica</h2>
-    <p>Pour avoir plus d'informations sur nos gîtes, vous pouvez nous contacter par téléphone oubien par mail</p>
-    <div class="row">
-        <div class="col-md-6">
+				<div class="row">
+					<div class="col-md-6">
+						<img src="/images/properties/logo.jpg" style="width: 80%; height: auto;">
+					</div>
+					<div class="col-md-6 mt-5 text-center">
+						<h1>Progica</h1>
+						<h5>
+							<em>
+								Association des propriétaires de gîtes campagnards</em>
+						</h5>
+						<br>
+						<h2 class="mt-3">Les gîtes disponibles</h2>
+						<p>
+							Découvrez l'ensemble de notre parc locatif sur toute la France.
+							<br>
+							Les gîtes sont disponibles à la semaine
+							<br>
+							<a href="{{ path('property.index')}}" class="btn btn-primary mt-5">Découvrez nos gîtes</a>
+						</p>
+					</div>
+				</div>
+			</div>
+
+			<hr>
+
+			<div class="col-md-6 text-center">
+				<h2>Contacter Progica</h2>
+			</div>
+			<p>Pour avoir plus d'informations sur nos gîtes, vous pouvez nous contacter par téléphone oubien par mail</p>
 
 
-            <h4>Par téléphone au 02.97.01.02.03</h4>
-            <p>
-            <table class="table table-striped">
-                <tr>
-                    <td>Lundi</td>
-                    <td>De 8h à 12h</td>
-                </tr>
-                <tr>
-                    <td>Mardi</td>
-                    <td>De 8h à 12h et de 14h à 17h</td>
-                </tr>
-                <tr>
-                    <td>Mercredi</td>
-                    <td>De 8h à 12h</td>
-                </tr>
-                <tr>
-                    <td>Jeudi</td>
-                    <td>De 8h à 12h</td>
-                </tr>
-                <tr>
-                    <td>Vendredi</td>
-                    <td>De 8h à 12h</td>
-                </tr>
-            </table>
-            </p>
+			<div class="row  text-center">
+				<div class="col-md-6">
+
+					<h4>Par téléphone au 02.97.01.02.03</h4>
+					<p>
+						<table class="table table-striped">
+							<tr>
+								<td>Lundi</td>
+								<td>De 8h à 12h</td>
+							</tr>
+							<tr>
+								<td>Mardi</td>
+								<td>De 8h à 12h et de 14h à 17h</td>
+							</tr>
+							<tr>
+								<td>Mercredi</td>
+								<td>De 8h à 12h</td>
+							</tr>
+							<tr>
+								<td>Jeudi</td>
+								<td>De 8h à 12h</td>
+							</tr>
+							<tr>
+								<td>Vendredi</td>
+								<td>De 8h à 12h</td>
+							</tr>
+						</table>
+					</p>
+
+				</div>
+				<div class="col-md-6">
+
+					<h4>Par mail</h4>
+					<p>
+
+						<a href="{{ path('contact')}}" class="btn btn-primary mt-5 mb-5">Nous contacter</a>
+					</p>
 
 
-        </div>
-        <div class="col-md-6">
-
-            <h4>Par mail</h4>
-            <p>
-
-                <a href="{{ path('contact')}}" class="btn btn-primary mt-5 mb-5">Nous contacter</a>
-            </p>
+				</div>
+				<div></div>
 
 
+			</div>
 
-        </div>
-        <div>
-
-        </div>
-
-
-    </div>
-
-</div>
-</body>
+		</div>
+	</body>
 
 {% endblock %}
+
