--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -1,50 +1,52 @@
 {% extends "base.html.twig" %}
 
-{% block title %}gîtes{% endblock %}
-
-{% block body %}
-<body>
-<div class="container mt-4">
-   
-        {{ form_start(form) }}
-        <div class="form-control">
-            <div class="row mt-3">
-            <div class="col-3">
-                {{ form_row(form.minSurface) }} 
-            </div>
-            <div class="col-3">
-                {{ form_row(form.maxPrice) }} 
-            </div>
-            <div class="col-3">
-                {{ form_row(form.options) }} 
-            </div>
-            <div class="col-3">
-                <button class="btn btn-primary">Rechercher</button>
-            </div>
-        </div>
-        </div>
-        {{ form_end(form) }}
-</div>
-
-
-<div class="container mt-4">
-    <h1>Nos gîtes disponibles à la semaine</h1>
-
-    <div class="row">
-        {% for property in properties %}
-        <div class="col-md-4">
-            {% include 'property/_property.html.twig' %}
-        </div>
-        {% endfor %}
-    </div>
-    <div class="pagination">
-        
-        {{ knp_pagination_render(properties) }}
-    </div>
-</div>
-</body>
+{% block title %}gîtes
 {% endblock %}
 
+{% block body %}
+	<body>
+		<div class="container mt-4">
+
+			{{ form_start(form) }}
+			<div class="form-control">
+				<div class="row mt-3">
+					<div class="col-2">
+						{{ form_row(form.minSurface) }}
+					</div>
+					<div class="col-2">
+						{{ form_row(form.maxPrice) }}
+					</div>
+					<div class="col-3">
+						{{ form_row(form.minBed) }}
+					</div>
+					<div class="col-3">
+						{{ form_row(form.options) }}
+					</div>
+					<div class="col-2">
+						<button class="btn btn-primary">Rechercher</button>
+					</div>
+				</div>
+			</div>
+			{{ form_end(form) }}
+		</div>
 
 
+		<div class="container mt-4">
+			<h1 class="text-center mb-4">Nos gîtes disponibles à la semaine</h1>
 
+			<div class="row">
+				{% for property in properties %}
+					<div class="col-md-4">
+						{% include 'property/_property.html.twig' %}
+					</div>
+				{% endfor %}
+			</div>
+			<div class="pagination">
+
+				{{ knp_pagination_render(properties) }}
+			</div>
+		</div>
+		
+
+	</body>
+{% endblock %}
