--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,65 +13,68 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-		{% block stylesheets %}{% endblock %}
-	</head>
+		 {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
+		</head>
 
-	<body>
+		<body>
 
-		<nav class="navbar navbar-expand-lg navbar-dark  bg-secondary bg-opacity-75">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="{{ path('home')}}">Progica</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<nav class="navbar navbar-expand-lg navbar-dark  bg-secondary bg-opacity-75">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="{{ path('home')}}">Progica</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-						{% if app.user %}
-							<li class="nav-item">
-								<a class="nav-link {% if current_menu is defined and current_menu == 'properties' %} active {% endif %}" aria-current="page" href="{{ path('property.index')}}">Nos gîtes</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link {% if current_menu is defined and current_menu == 'contact' %} active {% endif %}" aria-current="page" href="{{ path('contact')}}">Contact</a>
-							</li>
-
-							{% if is_granted('ROLE_ADMIN') %}
+							{% if app.user %}
 								<li class="nav-item">
-									<a class="nav-link d-flex {% if current_menu is defined and current_menu == 'contact' %} active {% endif %} " aria-current="page" href="{{ path('admin.property.index')}}">Admin</a>
+									<a class="nav-link {% if current_menu is defined and current_menu == 'properties' %} active {% endif %}" aria-current="page" href="{{ path('property.index')}}">Nos gîtes</a>
 								</li>
-							{% endif %}
+								<li class="nav-item">
+									<a class="nav-link {% if current_menu is defined and current_menu == 'contact' %} active {% endif %}" aria-current="page" href="{{ path('contact')}}">Contact</a>
+								</li>
+
+								{% if is_granted('ROLE_ADMIN') %}
+									<li class="nav-item">
+										<a class="nav-link d-flex {% if current_menu is defined and current_menu == 'contact' %} active {% endif %} " aria-current="page" href="{{ path('admin.property.index')}}">Admin</a>
+									</li>
+								{% endif %}
 								<li class="nav-item">
 									<a class="nav-link d-flex " href="{{ path('app_logout')}}">Se déconnecter</a>
 								</li>
 
-						{% else %}
-							<li class="nav-item">
-								<a class="nav-link {% if current_menu is defined and current_menu == 'properties' %} active {% endif %}" aria-current="page" href="{{ path('property.index')}}">Nos gîtes</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link {% if current_menu is defined and current_menu == 'contact' %} active {% endif %}" aria-current="page" href="{{ path('contact')}}">Contact</a>
-							</li>
-							
+							{% else %}
+								<li class="nav-item">
+									<a class="nav-link {% if current_menu is defined and current_menu == 'properties' %} active {% endif %}" aria-current="page" href="{{ path('property.index')}}">Nos gîtes</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link {% if current_menu is defined and current_menu == 'contact' %} active {% endif %}" aria-current="page" href="{{ path('contact')}}">Contact</a>
+								</li>
+
 								<li class="nav-item">
 									<a class="nav-link  " href="{{ path('app_login')}}">Se connecter</a>
 								</li>
-						</ul>
-					{% endif %}
+							</ul>
+						{% endif %}
+					</div>
 				</div>
-			</div>
-		</nav>
-		{% block body %}{% endblock %}
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-		<script>
-			$('select').select2();
-		</script>
+			</nav>
+			{% block body %}{% endblock %}
 
-		{% block javascripts %}{% endblock %}
-	</body>
-</html></body</html>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+			<script>
+				$('select').select2();
+			</script>
 
-
+			{% block javascripts %}{% endblock %}
+		</body>
+	</html>
+</body</html>
