--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
 
 								{% if is_granted('ROLE_ADMIN') %}
 									<li class="nav-item">
-										<a class="nav-link d-flex {% if current_menu is defined and current_menu == 'contact' %} active {% endif %} " aria-current="page" href="{{ path('admin.property.index')}}">Admin</a>
+										<a class="nav-link d-flex active " aria-current="page" href="{{ path('admin.property.index')}}">Admin</a>
 									</li>
 								{% endif %}
 								<li class="nav-item">
@@ -74,7 +74,7 @@
 				$('select').select2();
 			</script>
 
-			{% block javascripts %}{% endblock %}
+			{% block javascript %}{% endblock %}
 		</body>
 	</html>
 </body</html>
