--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,12 +31,17 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+							
+							
 							{% if app.user %}
 								<li class="nav-item">
 									<a class="nav-link {% if current_menu is defined and current_menu == 'properties' %} active {% endif %}" aria-current="page" href="{{ path('property.index')}}">Nos gîtes</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link {% if current_menu is defined and current_menu == 'contact' %} active {% endif %}" aria-current="page" href="{{ path('contact')}}">Contact</a>
+								</li>
+								<li class="nav-item">
+										<a class="nav-link d-flex active " aria-current="page" href="{{ path('users')}}">Profil</a>
 								</li>
 
 								{% if is_granted('ROLE_ADMIN') %}
@@ -45,7 +50,7 @@
 									</li>
 								{% endif %}
 								<li class="nav-item">
-									<a class="nav-link d-flex " href="{{ path('app_logout')}}">Se déconnecter</a>
+									<a class="nav-link d-flex " href="{{ path('app_logout')}}" >Se déconnecter</a>
 								</li>
 
 							{% else %}
