--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -20,8 +20,11 @@
 					                semaine</div>
 				<p>{{property.description | nl2br}}</p>
 
-				<div class="text-center">
-					<a href="#" class="btn btn-primary mt-4">Contacter Le propriétaire</a>
+				<div class="text-center mt-4">
+					<h4>Propriétaire du gîte :</h4>
+					<p class="mt-2">{{property.user.username}}</p>
+					<h4>Personne à contacter :</h4>
+					<p class="mt-2"></p>
 				</div>
 			</div>
 		</div>
