--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
     #}
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Se connecter
     </button>
 </form>
 </div>
