--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,6 +60,9 @@
 								<li class="nav-item">
 									<a class="nav-link {% if current_menu is defined and current_menu == 'contact' %} active {% endif %}" aria-current="page" href="{{ path('contact')}}">Contact</a>
 								</li>
+								<li class="nav-item">
+										<a class="nav-link d-flex active " aria-current="page" href="{{ path('app_register')}}">Créer un compte</a>
+								</li>
 
 								<li class="nav-item">
 									<a class="nav-link  " href="{{ path('app_login')}}">Se connecter</a>
