--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,15 +16,14 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
+    <h1 class="h3 mb-3 font-weight-normal text-center" >Se connecter</h1>
+    <label for="inputUsername">Pseudo</label>
     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <label for="inputPassword" class="mt-3" >Mot de passe</label>
+    <input type="password" name="password" id="inputPassword" class="form-control mb-5" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+           value="{{ csrf_token('authenticate') }}" >
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
