--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,24 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register
-{% endblock %}
-
+{% block title %}Register{% endblock %}
 {% block body %}
-	<h1 class="text-center mt-4">Créer un compte</h1>
-	<div class="container">
-		<div class="row col-md-6 offset-3">
-			<div class="bg-light mt-4">
-				{{ form_start(registrationForm) }}
-				{{ form_row(registrationForm.username) }}
-				{{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+   <div class="col-md-4 offset-4">
+    <h1 class="text-center mt-3 mb-4">Créer un compte</h1>
+    {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.username) }}
+        {{ form_row(registrationForm.plainPassword, {
+            label: 'Mot de passe'
         }) }}
-
-
-				{{ form_end(registrationForm) }}
-				<button type="submit" class="btn btn-primary mb-5">S'enregistrer</button>
-			</div>
-		</div>
-	</div>
-
+    {{ form_row(registrationForm.nom) }}  
+    {{ form_row(registrationForm.prenom) }}
+    {{ form_row(registrationForm.adresse) }}
+    {{ form_row(registrationForm.code_postal) }}
+    {{ form_row(registrationForm.ville) }}
+    {{ form_row(registrationForm.email) }}
+    {{ form_row(registrationForm.telephone) }}
+        <button type="submit" class="btn btn-primary">S'enregistrer</button>
+    {{ form_end(registrationForm) }}
+   </div>
 {% endblock %}
