--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -1,15 +1,85 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Profil{% endblock %}
+{% block title %}Profil
+{% endblock %}
 {% block body %}
-<body>
-    <h1 class="text-center mt-3">Votre profil</h1>
-    <h4 class="text-center">Bonjour {{app.user.username}}</h4>
 
-{% for property in app.user.properties%}
-{{property.title}}
-    
-{% endfor %}
-</body>
+	<body>
+		<div class="container">
+			<div class="row mt-2 mb-4">
+				<h1 class="text-center mt-3">Votre profil</h1>
+				<h4 class="text-center">Bonjour {{app.user.username}}</h4>
+			</div>
+			<hr>
+			<div class="row mt-5">
+				<div class="col-md-6">
+					<h2 class="mb-5">Vos infomations personnelles</h2>
+
+					<table class="table table-striped">
+						<tbody>
+							<tr>
+								<td>Nom :</td>
+								<td>{{ app.user.nom }}</td>
+							</tr>
+							<tr>
+								<td>Prénom :</td>
+								<td>{{ app.user.prenom }}</td>
+							</tr>
+							<tr>
+								<td>Adresse :</td>
+								<td>{{ app.user.adresse}}</td>
+							</tr>
+							<tr>
+								<td>Code Postal :</td>
+								<td>{{ app.user.codePostal }}</td>
+							</tr>
+							<tr>
+								<td>Ville :</td>
+								<td>{{ app.user.ville }}</td>
+							</tr>
+							<tr>
+								<td>Email :</td>
+								<td>{{ app.user.email }}</td>
+							</tr>
+							<tr>
+								<td>Téléphone :</td>
+								<td>{{ app.user.telephone }}</td>
+							</tr>
+						</tbody>
+					</table>
+
+				</div>
+				<div class="col-md-6">
+					<h2>Vos gîtes</h2>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Nom</th>
+								<th>Commune</th>
+								<th>Prix à la semaine</th>
+								<th>Nombre de couchages</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for property in app.user.properties %}
+								<tr>
+									<td>{{ property.title }}</td>
+									<td>{{ property.postalCode }} - {{ property.city }}</td>
+									<td>{{property.formattedPrice}} €</td>
+									<td>{{ property.bed}}</td>
+								</tr>
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<h5 class="text-center mt-3">Si vous souhaitez modifier des informations concernant vos gîtes ou votre profil, contactez PROGICA via notre formulaire de contact</h5>
+			<div class="mt-2 text-center">
+			<a class="btn btn-primary mt-3" href="{{ path('contact')}}">Nous contacter</a>
+			</div>
+		</div>
+
+
+	</body>
 
 {% endblock %}
